--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from "astro:assets";
+import BaseLayout from "./BaseLayout.astro";
 
 interface frontmatter {
   title: string;
@@ -17,11 +18,25 @@ const { frontmatter } = Astro.props;
 
 <head>
   <meta charset="utf-8" />
+  <style is:global>
+    .img {
+      display: flex;
+      justify-content: center;
+    }
+  </style>
 </head>
 
-<h1>{frontmatter.title}</h1>
-<p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
-<p><em>{frontmatter.description}</em></p>
-<p>Written by: {frontmatter.author}</p>
-<Image src={frontmatter.image.url} inferSize={true} alt={frontmatter.image.alt} />
-<slot />
+<BaseLayout pageTitle={frontmatter.title}>
+  <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
+  <p><em>{frontmatter.description}</em></p>
+  <p>Written by: {frontmatter.author}</p>
+  <div class="img">
+    <Image
+      src={frontmatter.image.url}
+      inferSize={true}
+      loading="eager"
+      alt={frontmatter.image.alt}
+    />
+  </div>
+  <slot />
+</BaseLayout>
