--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -18,15 +18,17 @@ const { frontmatter } = Astro.props;
 
 <head>
   <meta charset="utf-8" />
+</head>
+
+<BaseLayout pageTitle={frontmatter.title}>
   <style is:global>
     .img {
       display: flex;
       justify-content: center;
+      width: 160ch;
+      height: 80ch;
     }
   </style>
-</head>
-
-<BaseLayout pageTitle={frontmatter.title}>
   <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
   <p><em>{frontmatter.description}</em></p>
   <p>Written by: {frontmatter.author}</p>
