--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,9 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+import BlogPost from "../components/BlogPost.astro";
+const allPosts = Object.values(
+  import.meta.glob("./posts/*.md", { eager: true }),
+);
 const pageTitle = "My Astro Learning Blog";
 ---
 
@@ -17,6 +20,10 @@ const pageTitle = "My Astro Learning Blog";
     back and see how my journey is going!
   </p>
   <ul>
-    {allPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+    {
+      allPosts.map((post: any) => (
+        <BlogPost url={post.url} title={post.frontmatter.title} />
+      ))
+    }
   </ul>
 </BaseLayout>
